# WebApp-Dashboard

./: LICENSE  README.md  install.sh  pyproject.toml  requirements.txt
docs/: usage.md
websec_platform/: __init__.py  __main__.py  app.py  config.py
websec_platform.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
websec_platform/static/css/: main.css
websec_platform/static/js/: app.js
websec_platform/templates/: index.html
