[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "websec-platform"
version         = "1.1.0"
description     = "OWASP-based web application security testing platform with kickoff scripts and AI report generation"
readme          = "README.md"
license         = { file = "LICENSE" }
requires-python = ">=3.9"
authors         = [{ name = "Your Name", email = "you@example.com" }]
keywords        = ["security", "pentesting", "owasp", "web", "appsec"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]

dependencies = [
    "flask>=3.1.0",
    "waitress>=3.0.1",
    "python-dotenv>=1.0.1",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-flask>=1.3",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
websec = "websec_platform.__main__:main"

[project.urls]
Homepage   = "https://github.com/yourusername/websec-platform"
Repository = "https://github.com/yourusername/websec-platform"
Issues     = "https://github.com/yourusername/websec-platform/issues"

[tool.setuptools.packages.find]
where   = ["."]
include = ["websec_platform*"]

[tool.setuptools.package-data]
websec_platform = ["templates/*.html", "static/**/*"]

# ── ruff (replaces black + flake8 + isort) ─────────────────────────────────
[tool.ruff]
line-length    = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.per-file-ignores]
"websec_platform/__main__.py" = ["ANN"]

# ── mypy ───────────────────────────────────────────────────────────────────
[tool.mypy]
python_version         = "3.9"
strict                 = true
ignore_missing_imports = true

# ── pytest ─────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_*.py"]
